--- a/src/styles/wiki.css
+++ b/src/styles/wiki.css
@@ -36,11 +36,8 @@ main.page.wikiShell > *,
   margin-top: 0 !important;
   padding: 0 var(--wikiContentSidePadding);
   padding-left: calc(
-    var(--wikiSidebarLeftInset)
-    + var(--wikiSidebarWidth)
-    + var(--wikiContentGap)
-    + var(--wikiContentSidePadding)
-    + var(--wikiContentShiftX)
+    var(--wikiSidebarLeftInset) + var(--wikiSidebarWidth) + var(--wikiContentGap) + var(--wikiContentSidePadding) +
+      var(--wikiContentShiftX)
   );
   transform: none;
 }
@@ -109,7 +106,10 @@ main.page.wikiShell > *,
 }
 
 .wikiCard {
-  transition: transform 180ms ease, box-shadow 180ms ease, border-color 180ms ease;
+  transition:
+    transform 180ms ease,
+    box-shadow 180ms ease,
+    border-color 180ms ease;
   will-change: transform;
 }
 
@@ -130,7 +130,10 @@ main.page.wikiShell > *,
   max-height: 0;
   opacity: 0;
   transform: translateY(-6px);
-  transition: max-height 260ms ease, opacity 200ms ease, transform 200ms ease;
+  transition:
+    max-height 260ms ease,
+    opacity 200ms ease,
+    transform 200ms ease;
   will-change: max-height, opacity, transform;
 }
 
