--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -141,7 +141,7 @@ import "../styles/global.css";
         </div>
 
         <div style="margin-top: 22px;">
-          <a class="btn btnPrimary" href="https://discord.gg/BHrMVpeT" target="_blank">
+          <a class="btn btnPrimary" href="https://discord.gg/ffwfbjhBHr" target="_blank">
             Join Discord
           </a>
         </div>
