--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -169,14 +169,21 @@ const mods = [
     source: "https://github.com/Let-s-Do-Collection/WilderNature",
     tags: ["worldgen", "nature", "plants", "atmosphere", "food"],
   },
-    {
-      title: "Hearth & Timber",
-      logo: "/assets/mod-logos/hearth_and_timber.png",
-      description: "Woodworking, rustic building pieces, and homey details for long-term worlds.",
-      wiki: "/docs/mods/hearth-and-timber/",
-      source: "https://github.com/Let-s-Do-Collection/HearthAndTimber",
-      tags: ["building", "wood", "decor", "rustic", "biomes"],
-    },
+{
+  title: "Hearth & Timber",
+  logo: "/assets/mod-logos/hearth_and_timber.png",
+  description: "Rustic building blocks, timber framing, and natural materials for detailed and long lasting builds.",
+  wiki: "/docs/mods/hearth-and-timber/",
+  source: "https://github.com/Let-s-Do-Collection/HearthAndTimber",
+tags: [
+  "building",
+  "decorative_blocks",
+  "wood_variants",
+  "timber_framing",
+  "rustic_building",
+  "worldgen_features"
+]
+},
 ];
 ---
 
